force-app/main/default/objects/Opportunity/fields/ABOR_GPA__c.field-meta.xml
<CustomField>
    <fullName>ABOR_GPA__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Peoplesoft] Official GPA from 16 core competencies.  PS Table = EXT_ACAD_SUM, PS Field =  CONVERT_GP 
Where EXT_SUMM_TYPE = ABOR (ABOR GPA)</description>
    <inlineHelpText>Official GPA from 16 core competencies.</inlineHelpText>
    <label>ABOR GPA</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>