force-app/main/default/objects/Opportunity/fields/Academic_Interest__c.field-meta.xml
<CustomField>
    <fullName>Academic_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[Purchased list] - Generic interest a prospective student is interested in
[DW: sfe_opportunity]</description>
    <label>Academic Interest</label>
    <referenceTo>Academic_Interest__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_AcademicInterest</relationshipName>
    <type>Lookup</type>
</CustomField>