force-app/main/default/objects/Opportunity/fields/Academic_Plan__c.field-meta.xml
<CustomField>
    <fullName>Academic_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>[Peoplesoft] - Academic plan a prospective student is interested in or a student has applied to.
[DW: sfe_opportunity]</description>
    <inlineHelpText>Program of interest or applied program</inlineHelpText>
    <label>Academic Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Plan__c.Available_in_Degree_Search__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>