force-app/main/default/objects/Opportunity/fields/Academic_Plan_Associated_College__c.field-meta.xml
<CustomField>
    <fullName>Academic_Plan_Associated_College__c</fullName>
    <description>[Salesforce] - Formula field that displays the associated Academic Plan's Program (College) name.  Used in reports.</description>
    <formula>IF( Admitted_Plan__c &lt;&gt; "",  Admitted_Plan__r.eAdvisor_Organization__r.Name ,  Academic_Plan__r.eAdvisor_Organization__r.Name )</formula>
    <inlineHelpText>This is the college name associated to Plan through the eAdvisor org.</inlineHelpText>
    <label>Printable College</label>
    <type>Text</type>
</CustomField>