force-app/main/default/objects/Opportunity/fields/Action_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Action_Reason_Code__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>[Peoplesoft] PS_ACAD_PROG.PROG_REASON IS NOT NULL THEN PS_ACAD_PROG.PROG_REASON ELSE PS_ADM_MC_VW.PROG_REASON</description>
    <inlineHelpText>Action Reason for the Student Program Plan</inlineHelpText>
    <label>Program Reason</label>
    <length>10</length>
    <type>Text</type>
</CustomField>