force-app/main/default/objects/Opportunity/fields/Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount__c</fullName>
    <description>This is the final payout to ASU for the Opportunity</description>
    <inlineHelpText>This is the final payout to ASU for the Opportunity</inlineHelpText>
    <label>Actual Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>