force-app/main/default/objects/Opportunity/fields/Admission_Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Admission_Test_Type__c</fullName>
    <businessOwnerGroup>Data_Owner_WPC_Graduate_Programs_Office</businessOwnerGroup>
    <description>[Grad Partial App/Grad App Submission] - Denotes the type of test that the applicant indicated on their application.</description>
    <inlineHelpText>[Grad Partial App/Grad App Submission] - Denotes the type of test that the applicant indicated on their application.</inlineHelpText>
    <label>Admission Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GMAT</fullName>
            </value>
            <value>
                <fullName>GRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>