force-app/main/default/objects/Opportunity/fields/Admit_Qualifier_Date__c.field-meta.xml
<CustomField>
    <fullName>Admit_Qualifier_Date__c</fullName>
    <description>[MC interactive email, manual entry] - Date the qualifier was captured for a prospective student in the Admit stage.
[DW: sfe_opportunity]</description>
    <label>Admit Qualifier Date</label>
    <type>Date</type>
</CustomField>