force-app/main/default/objects/Opportunity/fields/Admit_Qualifier_Decision__c.field-meta.xml
<CustomField>
    <fullName>Admit_Qualifier_Decision__c</fullName>
    <description>[MC interactive email, manual entry] - Decision of a prospective student in the Admit stage
[DW: sfe_opportunity]</description>
    <label>Admit Qualifier Decision</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Admit_Qualifier__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1st Choice Program unavailable</fullName>
            </value>
            <value>
                <fullName>BHC Admission</fullName>
            </value>
            <value>
                <fullName>Career placement</fullName>
            </value>
            <value>
                <fullName>Competing Scholarship</fullName>
            </value>
            <value>
                <fullName>Continuing at 2 yr institution</fullName>
            </value>
            <value>
                <fullName>Course Availability</fullName>
            </value>
            <value>
                <fullName>COVID-19 may have impacted my plans</fullName>
            </value>
            <value>
                <fullName>Decided to attend elsewhere</fullName>
            </value>
            <value>
                <fullName>Decided to attend online program</fullName>
            </value>
            <value>
                <fullName>Distance from Home</fullName>
            </value>
            <value>
                <fullName>Family or work</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Going to 4 yr institution</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>I-20 issued by another University</fullName>
            </value>
            <value>
                <fullName>I-20 not issued in time</fullName>
            </value>
            <value>
                <fullName>I-20 not received in time</fullName>
            </value>
            <value>
                <fullName>Interested in deferring</fullName>
            </value>
            <value>
                <fullName>Job offer</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Major not offered at preferred campus</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Mission</fullName>
            </value>
            <value>
                <fullName>Not admitted to 1st choice</fullName>
            </value>
            <value>
                <fullName>Playing Athletics elsewhere</fullName>
            </value>
            <value>
                <fullName>Reputation</fullName>
            </value>
            <value>
                <fullName>Response time</fullName>
            </value>
            <value>
                <fullName>Size (too big)</fullName>
            </value>
            <value>
                <fullName>Size (too small)</fullName>
            </value>
            <value>
                <fullName>Starting at 2 yr institution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>