force-app/main/default/objects/Opportunity/fields/Admitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Admitted_Date__c</fullName>
    <description>[Peoplesoft] - Date that the student was admitted into program. This date is generated in PeopleSoft.
[DW: sfe_opportunity]</description>
    <inlineHelpText>Date that the student was admitted. This date is generated in PeopleSoft.</inlineHelpText>
    <label>Admitted Date</label>
    <type>Date</type>
</CustomField>