force-app/main/default/objects/Opportunity/fields/Admitted_Location__c.field-meta.xml
<CustomField>
    <fullName>Admitted_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[Peoplesoft] - Location where the student will attend for the admitted plan.
[DW: sfe_opportunity]</description>
    <inlineHelpText>Location where the student will attend for the admitted plan.</inlineHelpText>
    <label>Admitted Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Opportunities (Admitted Location)</relationshipLabel>
    <relationshipName>Opportunities_AdmittedLocation</relationshipName>
    <type>Lookup</type>
</CustomField>