force-app/main/default/objects/Opportunity/fields/Admitted_Plan__c.field-meta.xml
<CustomField>
    <fullName>Admitted_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[Peoplesoft] - Academic plan a prospective student is interested in or a student has applied to.
[DW: sfe_opportunity]</description>
    <inlineHelpText>Academic plan the student was admitted</inlineHelpText>
    <label>Admitted Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Opportunities (Admitted Plan)</relationshipLabel>
    <relationshipName>Opportunities_AdmittedPlan</relationshipName>
    <type>Lookup</type>
</CustomField>