force-app/main/default/objects/Opportunity/fields/Admitted_Session__c.field-meta.xml
<CustomField>
    <fullName>Admitted_Session__c</fullName>
    <description>[Peoplesoft] - Examples include: A/C, B
[DW: sfe_opportunity]</description>
    <inlineHelpText>Session the admitted student will be starting.</inlineHelpText>
    <label>Admitted Session</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A/C</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>