force-app/main/default/objects/Opportunity/fields/Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Amount_Requested__c</fullName>
    <description>The Amount ASU requested / expects to receive</description>
    <inlineHelpText>The Amount ASU requested / expects to receive</inlineHelpText>
    <label>Amount Requested</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>