force-app/main/default/objects/Opportunity/fields/Applicant_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Qualifier__c</fullName>
    <description>[MC interactive email, manual entry] - Date of Applicant Qualifier
[DW: sfe_opportunity]</description>
    <label>Applicant Qualifier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I plan to attend</fullName>
            </value>
            <value>
                <fullName>I am still considering</fullName>
            </value>
            <value>
                <fullName>I am not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>