force-app/main/default/objects/Opportunity/fields/Applicant_Qualifier_Date__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Qualifier_Date__c</fullName>
    <description>[MC interactive email, manual entry] - Date the qualifier was captured for a prospective student in the Application stage.
[DW: sfe_opportunity]</description>
    <label>Applicant Qualifer Date</label>
    <type>Date</type>
</CustomField>