force-app/main/default/objects/Opportunity/fields/Application_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Completion_Date__c</fullName>
    <description>[??] - Date application file is completed.
[DW: sfe_opportunity]</description>
    <inlineHelpText>Date application file is completed.</inlineHelpText>
    <label>Application Completion Date</label>
    <type>Date</type>
</CustomField>