force-app/main/default/objects/Opportunity/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <businessOwnerGroup>Data_Owner_Recruitment</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Peoplesoft] Date application loaded to Peoplesoft.
[DW: sfe_opportunity]</description>
    <inlineHelpText>[Peoplesoft] Date application loaded to Peoplesoft.
[DW: sfe_opportunity]</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>