force-app/main/default/objects/Opportunity/fields/Application_Fee_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Fee_Status__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>[Peoplesoft] - Application Fee Status; PS Table = ADM_APPL_DATA, PS Field = APPL_FEE_STATUS</description>
    <inlineHelpText>App fee must be paid or waived for a file to be evaluated</inlineHelpText>
    <label>PS App Fee Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deferred Payment</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Waiver Request</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Received from Third Party</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>