force-app/main/default/objects/Opportunity/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <description>[Peoplesoft] - textbox showing the application number (up to 8 digits)
[DW: sfe_opportunity]</description>
    <label>Application Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>