force-app/main/default/objects/Opportunity/fields/Application_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Started_Date__c</fullName>
    <businessOwnerGroup>Data_Owner_Recruitment</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Grad Application integration] The date the applicant started their Graduate Application.</description>
    <inlineHelpText>[Grad Application integration] The date the applicant started their Graduate Application.</inlineHelpText>
    <label>Application Started Date</label>
    <type>Date</type>
</CustomField>