force-app/main/default/objects/Opportunity/fields/Application_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submitted_Date__c</fullName>
    <businessOwnerGroup>Data_Owner_Recruitment</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Grad Application Integration] The date the applicant submitted their Graduate Application.</description>
    <inlineHelpText>[Grad Application Integration] The date the applicant submitted their Graduate Application.</inlineHelpText>
    <label>Application Submitted Date</label>
    <type>Date</type>
</CustomField>