force-app/main/default/objects/Opportunity/fields/Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date__c</fullName>
    <businessOwnerGroup>Data_Owner_WPC_Graduate_Programs_Office</businessOwnerGroup>
    <description>[Manual] Self-reported date from student indicating the date they plan to arrive in AZ prior to the start of the program.</description>
    <inlineHelpText>[Manual] Self-reported date from student indicating the date they plan to arrive in AZ prior to the start of the program.</inlineHelpText>
    <label>Arrival Date</label>
    <type>Date</type>
</CustomField>