force-app/main/default/objects/Opportunity/fields/Award_type__c.field-meta.xml
<CustomField>
    <fullName>Award_type__c</fullName>
    <description>The way the opportunity will be funded</description>
    <inlineHelpText>The way the opportunity will be funded</inlineHelpText>
    <label>Award type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Cooperative Agreement</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>IDIQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>