force-app/main/default/objects/Opportunity/fields/Barrett_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Barrett_Application_Date__c</fullName>
    <description>[??] - Date of Barrett application
[DW: sfe_opportunity]</description>
    <label>Barrett Application Date</label>
    <type>Date</type>
</CustomField>