force-app/main/default/objects/Opportunity/fields/Barrett_Application_Decision__c.field-meta.xml
<CustomField>
    <fullName>Barrett_Application_Decision__c</fullName>
    <description>[??] - Examples include: Accepted, Denied
[DW: sfe_opportunity]</description>
    <label>Barrett Application Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Deny Tempe, Admit Poly</fullName>
            </value>
            <value>
                <fullName>Deny Tempe, Admit Poly &amp; West</fullName>
            </value>
            <value>
                <fullName>Deny Tempe, Admit West</fullName>
            </value>
            <value>
                <fullName>DPC Admit</fullName>
            </value>
            <value>
                <fullName>Poly Admit</fullName>
            </value>
            <value>
                <fullName>Priority Action Wait List</fullName>
            </value>
            <value>
                <fullName>Regular Decision Wait List</fullName>
            </value>
            <value>
                <fullName>Tempe Admit</fullName>
            </value>
            <value>
                <fullName>West Admit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>