force-app/main/default/objects/Opportunity/fields/Barrett_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Barrett_Application_ID__c</fullName>
    <description>[??] - ID of Barrett application
[DW: sfe_opportunity]</description>
    <label>Barrett Application ID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>