force-app/main/default/objects/Opportunity/fields/Barrett_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Barrett_Application_Status__c</fullName>
    <description>[Import] - Complete when test scores and letters of rec are received and ASU admitted.
[DW: sfe_opportunity]</description>
    <inlineHelpText>Complete when both required letters of rec are received. Please also verify student is admitted to ASU with a test score on file.</inlineHelpText>
    <label>Barrett Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applicant - Complete</fullName>
            </value>
            <value>
                <fullName>Applicant - In Progress</fullName>
            </value>
            <value>
                <fullName>Applicant - In Review</fullName>
            </value>
            <value>
                <fullName>Applicant - Submitted</fullName>
            </value>
            <value>
                <fullName>Cancelled - In Review</fullName>
            </value>
            <value>
                <fullName>Cancelled - Pre-Review</fullName>
            </value>
            <value>
                <fullName>Cancelled - Pre-Submit</fullName>
            </value>
            <value>
                <fullName>Cancelled - Purge</fullName>
            </value>
            <value>
                <fullName>Decision Rendered</fullName>
            </value>
            <value>
                <fullName>Decision Rendered Spring</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Waiting Student Notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>