force-app/main/default/objects/Opportunity/fields/Barrett_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Barrett_Decision_Date__c</fullName>
    <description>[??] - Date of Barrett decision
[DW: sfe_opportunity]</description>
    <label>Barrett Decision Date</label>
    <type>Date</type>
</CustomField>