force-app/main/default/objects/Opportunity/fields/Barrett_Decision_Factors__c.field-meta.xml
<CustomField>
    <fullName>Barrett_Decision_Factors__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>[ASU Recruitment Users] - Provide a reason for the qualifier listed</description>
    <inlineHelpText>[ASU Recruitment Users] - Provide a reason for the qualifier listed</inlineHelpText>
    <label>Barrett Decision Factors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additional academic workload</fullName>
            </value>
            <value>
                <fullName>Additional cost of attendance</fullName>
            </value>
            <value>
                <fullName>Housing concerns</fullName>
            </value>
            <value>
                <fullName>No real value of an honors college education, financial or for career</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>