force-app/main/default/objects/Opportunity/fields/Barrett_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Barrett_Qualifier__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>[ASU Recruitment Users]</description>
    <label>Barrett Qualifier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applied, waiting for decision from BHC</fullName>
            </value>
            <value>
                <fullName>Attending ASU Not BHC</fullName>
            </value>
            <value>
                <fullName>Not Attending ASU or BHC</fullName>
            </value>
            <value>
                <fullName>Not Interested in BHC</fullName>
            </value>
            <value>
                <fullName>Plan to Apply to BHC</fullName>
            </value>
            <value>
                <fullName>Plan to Attend BHC</fullName>
            </value>
            <value>
                <fullName>Still Considering Applying to BHC</fullName>
            </value>
            <value>
                <fullName>Still Considering Attending BHC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>