force-app/main/default/objects/Opportunity/fields/Barrett_Qualifier_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Barrett_Qualifier_Last_Modified_By__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>[ASU Recruitment Users] - Populated automatically by a workflow when a recruitment users edits the "Barrett Qualifier" field.</description>
    <inlineHelpText>Populated automatically by a workflow when a recruitment users edits the "Barrett Qualifier" field. Shows the last date/time of the field edit along with the user who made the edit.</inlineHelpText>
    <label>Barrett Qualifier Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>