force-app/main/default/objects/Opportunity/fields/Call_Eligible_Domestic__c.field-meta.xml
<CustomField>
    <fullName>Call_Eligible_Domestic__c</fullName>
    <formula>IF( 
OR( 
AND(ISBLANK(Contact__r.HomePhone),ISBLANK(Contact__r.Phone)), 
Contact__r.DoNotCall = True, 
International_Student__c = True, 
Location__r.Name = "Online", 
Location__r.Name = "Lake Havasu", 
Location__r.Name = "Eastern Arizona College", 
Admitted_Location__r.Name = "Online", 
Admitted_Location__r.Name = "Lake Havasu", 
Admitted_Location__r.Name = "Eastern Arizona College", 
ISPICKVAL(ForecastCategoryName, "Withdrawn/Denied") 
),False,True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Eligible Domestic</label>
    <type>Checkbox</type>
</CustomField>