force-app/main/default/objects/Opportunity/fields/Campus_Incompatibility__c.field-meta.xml
<CustomField>
    <fullName>Campus_Incompatibility__c</fullName>
    <description>ASU Experience Builder form data on major incompatibility based on student responses. Low is unlikely to switch majors. High is likely to switch majors.</description>
    <inlineHelpText>ASU Experience Builder form data on major incompatibility based on student responses. Low is unlikely to switch majors. High is likely to switch majors.</inlineHelpText>
    <label>Campus Incompatibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>