force-app/main/default/objects/Opportunity/fields/Career__c.field-meta.xml
<CustomField>
    <fullName>Career__c</fullName>
    <description>[Peoplesoft] - Examples include: Undergraduate, Graduate, Law
[DW: sfe_opportunity]</description>
    <label>Career</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>