force-app/main/default/objects/Opportunity/fields/CBOV_GPA__c.field-meta.xml
<CustomField>
    <fullName>CBOV_GPA__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Peoplesoft] GPA from all acceptable college courses, USA, International, and ASU..  PS Table = EXT_ACAD_SUM, PS Field =CONVERT_GPA Where EXT_SUMM_TYPE = CBOV (Combo GPA)</description>
    <inlineHelpText>GPA from all acceptable college courses, USA, International, and ASU. Transfer GPA used for admission decision.</inlineHelpText>
    <label>CBOV GPA</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>