force-app/main/default/objects/Opportunity/fields/CI_Score__c.field-meta.xml
<CustomField>
    <fullName>CI_Score__c</fullName>
    <description>[Self Calculated] - Used for scholorship, admisstions, etc - calculated by Troy Buchanan in Admissions
[DW: sfe_opportunity]</description>
    <inlineHelpText>Calculated Index Score</inlineHelpText>
    <label>CI Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>