force-app/main/default/objects/Opportunity/fields/Class_Rank__c.field-meta.xml
<CustomField>
    <fullName>Class_Rank__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Peoplesoft] Position in class from transcript. PS Table = EXT_ACAD_SUM, PS Field =CLASS_RANK Where EXT_SUMM_TYPE = (HRSY) Hershey – from transcript</description>
    <inlineHelpText>Position in class from transcript.</inlineHelpText>
    <label>Class Rank</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>