force-app/main/default/objects/Opportunity/fields/Class_Size__c.field-meta.xml
<CustomField>
    <fullName>Class_Size__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Peoplesoft] Class Size from transcript. PS Table = EXT_ACAD_SUM; PS Field =CLASS_SIZE Where EXT_SUMM_TYPE = (HRSY) Hershey</description>
    <inlineHelpText>Class Size from transcript.</inlineHelpText>
    <label>Class Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>